# artmind

./: .gitignore  README.md  brain_server.py  config.yaml  interface_server.py  pyproject.toml  start_brain_server.sh  start_interface_server.sh  taggit.sh
brain/: domain_router.py  model_factory.py
brain/models/: base_model.py  ollama_model.py  openai_model.py
config/: config.yaml  config_setup.py  logging_setup.py
interface/: chat_history.py  ui_components.py
